--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,2 @@
-MONGODB_URL="mongodb+srv://saitadgzl:wellsaidbrotein@cluster0.zvnvf7j.mongodb.net/?retryWrites=true&w=majority""
+OPENAI_API_KEY="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"
+MONGODB_URL="mongodb+srv://saitadgzl:wellsaidbrotein@cluster0.zvnvf7j.mongodb.net/?retryWrites=true&w=majority"
